# PassGuard

./: .gitignore
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/config/: database.py
backend/controllers/: auth.py  email.py  login.py  password.py  security.py  service.py  storage.py  todo.py
backend/core/: config.py  database.py
backend/models/: model.py
backend/routes/: auth.py  password.py  passwords.py  sas.py  services.py  to_do.py
backend/schemas/: schema.py  todo.py
docs/: architecture-diagram.md  er-diagram.md  password.md  sequence-diagram.md  user-flow-diagram.md
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: Provider.tsx  globals.css  layout.tsx  not-found.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/forgot-password/: page.tsx
frontend/app/(auth)/reset-password/: page.tsx
frontend/app/(auth)/sign-in/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/(root)/: layout.tsx
frontend/app/(root)/home/: page.tsx
frontend/app/(root)/passwords/: page.tsx
frontend/app/(root)/services/: page.tsx
frontend/components/ui/: button.tsx  sidebar.tsx  sonner.tsx
frontend/crypto/: aesgcm.ts  argon2id.ts  hmac.ts  kdf.ts  keyStore.ts  sodium.ts
frontend/store/: persistStore.ts  store.ts
frontend/store/api/: authAPI.ts  passwordAPI.ts  servicesAPI.ts  storageAPI.ts  todoAPI.ts
frontend/store/slices/: kdfSlice.ts  passwordSlice.ts  servicesSlice.ts  todoSlice.ts  userSlice.ts
frontend/utils/: axios.ts  encoding.ts
(+36 files in other folders)
